[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/InteractiveConsole.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/ships/ShipDesignView.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/ships/ItemPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/Console.tres" type="Theme" id=4]
[ext_resource path="res://ui/ships/ShipDesignScreen.gd" type="Script" id=5]
[ext_resource path="res://ui/ships/ScrollEnvironment.tres" type="Environment" id=6]

[sub_resource type="World" id=1]
environment = ExtResource( 6 )

[node name="ShipDesignScreen" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.8
theme = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="All" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="VSplitContainer" parent="All"]
margin_right = 380.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="Info" parent="All/Shop" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 380.0
margin_bottom = 236.0
size_flags_stretch_ratio = 2.0
allow_input = false

[node name="Tabs" type="TabContainer" parent="All/Shop"]
margin_top = 244.0
margin_right = 380.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equipment" parent="All/Shop/Tabs" instance=ExtResource( 3 )]
margin_left = 5.0
margin_top = 30.0
margin_right = -5.0
margin_bottom = -5.0
initial_scale = 10.0

[node name="Weapons" parent="All/Shop/Tabs" instance=ExtResource( 3 )]
visible = false
margin_left = 5.0
margin_top = 30.0
margin_right = -5.0
margin_bottom = -5.0
initial_scale = 10.0

[node name="Designs" parent="All/Shop/Tabs" instance=ExtResource( 3 )]
visible = false
margin_left = 5.0
margin_top = 30.0
margin_right = -5.0
margin_bottom = -5.0
show_ships = true
initial_scale = 8.0

[node name="Ship" parent="All" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 388.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_stretch_ratio = 2.5

[node name="Drag" type="ViewportContainer" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="View" type="Viewport" parent="Drag"]
size = Vector2( 40, 40 )
own_world = true
world = SubResource( 1 )
handle_input_locally = false
render_target_update_mode = 3

[node name="EquipmentLight" type="DirectionalLight" parent="Drag/View"]
transform = Transform( 0.621162, 0.258923, -0.739673, 0.0939634, 0.912428, 0.398304, 0.778029, -0.316914, 0.542436, 4.90081, 10.6671, 9.82405 )
light_indirect_energy = 0.0
light_cull_mask = 4293918721
shadow_enabled = true
shadow_contact = 0.1

[node name="Camera" type="Camera" parent="Drag/View"]
transform = Transform( -1.62921e-07, 1, 1.62921e-07, 0, -1.62921e-07, 1, 1, 1.62921e-07, 2.65431e-14, 0, 30, 0 )
projection = 1
current = true
size = 2.16
[connection signal="deselect_item" from="All/Shop/Tabs/Equipment" to="." method="_on_Equipment_deselect_item"]
[connection signal="drag_selection" from="All/Shop/Tabs/Equipment" to="." method="_on_Equipment_drag_selection"]
[connection signal="select_item" from="All/Shop/Tabs/Equipment" to="." method="_on_Equipment_select_item"]
[connection signal="deselect_item" from="All/Shop/Tabs/Weapons" to="." method="_on_Weapons_deselect_item"]
[connection signal="drag_selection" from="All/Shop/Tabs/Weapons" to="." method="_on_Weapons_drag_selection"]
[connection signal="select_item" from="All/Shop/Tabs/Weapons" to="." method="_on_Weapons_select_item"]
[connection signal="deselect_item" from="All/Shop/Tabs/Designs" to="." method="_on_Designs_deselect_item"]
[connection signal="select_item" from="All/Shop/Tabs/Designs" to="." method="_on_Designs_select_item"]
[connection signal="pixel_height_changed" from="All/Ship" to="." method="_on_Ship_pixel_height_changed"]
